- Changed services order (on order form) and prices; - Removed bg-image on order form (mobile view) - Fixed Clients-carousel jumping behavior

--- a/sass/particles/_clients.scss
+++ b/sass/particles/_clients.scss
@@ -8,4 +8,9 @@
     .clients__item-avatar {
         border-radius: 50%;
     }
+    .carousel-item .row {
+        @include media('<tablet') {
+            min-height: 540px;
+        }
+    }
 }
